aligned mates and fixed templating

--- a/wp-content/themes/engage/assets/scss/components/_teammates.scss
+++ b/wp-content/themes/engage/assets/scss/components/_teammates.scss
@@ -37,7 +37,7 @@
 	border-radius: 50%;
 }
 
-.mate--has-img {
+.mate--has-img, .additional {
 	.mate__content {
 		@include media($mobile) {
 			grid-column: 3/-1;
@@ -79,7 +79,7 @@
 		}
 	}
 
-	&.mate--has-img {
+	&.mate--has-img, &.additional {
 		.mate__content {
 			@include media($mobile) {
 				grid-row: 1;
